@W-10917185 fix highlight delete z-index connector bug (#2608)
* W-10917185 fix hightlight/delete z-index connector bug

* testing classes added by isHighlighted and toBeDeleted

--- a/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
+++ b/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
@@ -14,7 +14,8 @@
 
     /* TODO: W-9582142: Group, clean up and rationalize the z-index number assignments   */
     --z-index-alc-connector-svg: -1;
-    --z-index-alc-connector-branch: -1;
+    --z-index-alc-connector-branch: -2;
+    --z-index-alc-connector-branch-is-highlighted: -1;
 
     --z-index-alc-dynamic-node-trigger: 2;
     --z-index-alc-dynamic-node: 1;
